--- a/FitPass/WebContent/WEB-INF/web.xml
+++ b/FitPass/WebContent/WEB-INF/web.xml
@@ -15,6 +15,6 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>Jersey REST Service</servlet-name>
-    <url-pattern>/fit-pass/*</url-pattern>
+    <url-pattern>/api/*</url-pattern>
   </servlet-mapping>
 </web-app>
